--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="logo">AnimeStream</div>
+            <div class="logo">oxxypedia</div>
             <nav>
                 <ul>
                     <li><a href="#" id="navHome" class="active">Home</a></li>
